components/mqtt-broker/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
    protocol: mqtt
  name: mosquitto-mqtt
  namespace: pji3
spec:
  type: ExternalName
  externalName: vm1.pji3.sj.ifsc.edu.br
  ports:
    - name: mqtt
      port: 1883
      protocol: TCP
      targetPort: 1883
  selector:
    app: mosquitto

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
    protocol: mqtt
  name: mosquitto-ws
  namespace: pji3
spec:
  ports:
    - name: mqtt-ws
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: mosquitto
