components/mqtt-broker/Ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  labels:
    app: mosquitto
    protocol: mqtt
  name: mosquitto
  namespace: pji3
spec:
  tls:
    - hosts:
        - mqtt.sj.ifsc.edu.br
      secretName: tls-ifsc-sje
  rules:
    - host: mqtt.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: mosquitto-ws
              servicePort: 9001
